Style updates, switch to newer bootstrap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>kepstin’s MagicISRC (Beta)</title>
     <link rel="stylesheet" href="bootstrap.css">
+<style>
+:root {
+  font-size: 14px;
+  --bs-font-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
+}
+</style>
 <script type="text/javascript">
 "use strict";
 
@@ -697,21 +703,19 @@ function restoreScrollPosition() {
 <script type="text/x-ejs" id="template_index">
 <p>MagicISRC is a tool that makes it easy to submit ISRCs for every track on a <a href="https://musicbrainz.org/">MusicBrainz</a> release.</p>
 <form method="get" onsubmit="doSubmitMbid(); return false;">
-  <div class="form-group">
-    <label for="mbid">Enter a release MBID:</label>
-    <div class="form-row">
-      <div class="col">
-        <input type="text" class="form-control form-control-lg<% if (mbidInvalid) { %> is-invalid <% } %>" id="mbid" value="<%= escapeHtml(mbid) %>">
-        <div class="invalid-feedback">The provided value doesn’t contain an MBID</div>
-      </div>
-      <div class="col-auto">
-        <button id="index-mbid-submit" type="submit" class="btn btn-lg btn-primary">Load</button>
-      </div>
+  <h1 class="h3"><label for="mbid">Enter a release MBID:</label></h1>
+  <div class="row mb-3">
+    <div class="col">
+      <input type="text" class="form-control form-control-lg<% if (mbidInvalid) { %> is-invalid <% } %>" id="mbid" value="<%= escapeHtml(mbid) %>">
+      <div class="invalid-feedback">The provided value doesn’t contain an MBID</div>
     </div>
-    <small class="form-text text-muted">
-      You can also paste in a URL to a release page, or any string containing a release MBID.
-    </small>
+    <div class="col-auto">
+      <button id="index-mbid-submit" type="submit" class="btn btn-lg btn-primary">Load</button>
+    </div>
   </div>
+  <small class="text-muted">
+    You can also paste in a URL to a release page, or any string containing a release MBID.
+  </small>
 </form>
 </script>
 <script type="text/x-ejs" id="template_submit">
@@ -734,15 +738,16 @@ function restoreScrollPosition() {
 <% } %>
 </script>
 <script type="text/x-ejs" id="template_release">
-<h1 class="mb-4">
-  <a href="<%= new URL("release/" + release["id"], mb_site) %>"><%= escapeHtml(release["title"]) %></a><br>
-  <small class="text-muted"><%= tmpl("template_ac", {ac: release["artist-credit"]}) %></small>
+<h1 class="h3">
+  <a class="text-decoration-none" href="<%= new URL("release/" + release["id"], mb_site) %>"><bdi><%= escapeHtml(release["title"]) %></bdi></a>
+  <% if (release["disambiguation"]) { %><small class="text-muted fs-6 fw-normal">(<bdi><%= escapeHtml(release["disambiguation"]) %></bid>)</small><% } %>
 </h1>
+<p class="mb-4"><span class="text-muted">~</span> Release by <%= tmpl("template_ac", {ac: release["artist-credit"]}) %></p>
 <form id="check-isrcs" method="get" onsubmit="doCheckIsrcs(); return false;">
   <input type="hidden" name="mbid" value="<%= release["id"] %>">
   <% for (var i = 0; i < release["media"].length; i++) { %>
     <% var medium = release["media"][i]; %>
-    <h2 class="">
+    <h2 class="h4">
       <%= medium["format"] ? escapeHtml(medium["format"]) : "Medium" %> <%= escapeHtml(medium["position"]) %><%= medium["title"] ? ": " + escapeHtml(medium["title"]) : "" %>
     </h2>
     <% if (medium["tracks"].length > 0) { %>
@@ -750,8 +755,13 @@ function restoreScrollPosition() {
         <thead class="d-block">
           <tr class="row py-2 border-bottom">
             <th scope="col" class="col-1 col-sm-1">#</th>
-            <th scope="col" class="col-11 col-sm-6">Track</th>
-            <th scope="col" class="col-11 offset-1 col-sm-5 offset-sm-0">ISRCs</th>
+            <th scope="col" class="col-11 col-sm-6 col-md-7 col-lg-8">
+              <div class="row">
+                <div class="col-lg-7">Track</div>
+                <div class="col-lg-5 d-none d-lg-block">Artist</div>
+              </div>
+            </th>
+            <th scope="col" class="col-11 offset-1 col-sm-5 col-md-4 col-lg-3 offset-sm-0">ISRCs</th>
           </tr>
         </thead>
         <tbody class="d-block">
@@ -760,11 +770,13 @@ function restoreScrollPosition() {
             <% var isrc = isrcs[i][j]; %>
             <tr class="row py-2 border-top">
               <th scope="row" class="col-1"><%= escapeHtml(track["number"]) %></th>
-              <td class="col-11 col-sm-6">
-                <a href="<%= new URL("recording/" + track["recording"]["id"], mb_site) %>"><%= escapeHtml(track["title"]) %></a><br>
-                <small class="text-muted"><%= tmpl("template_ac", {ac: track["artist-credit"]}) %></small>
+              <td class="col-11 col-sm-6 col-md-7 col-lg-8">
+                <div class="row">
+                  <div class="col-lg-7"><a class="text-decoration-none" href="<%= new URL("recording/" + track["recording"]["id"], mb_site) %>"><%= escapeHtml(track["title"]) %></a></div>
+                  <div class="col-lg-5"><span class="d-lg-none"><span class="text-muted">~</span> Track by </span><%= tmpl("template_ac", {ac: track["artist-credit"]}) %></div>
+                </div>
               </td>
-              <td class="col-11 offset-1 col-sm-5 offset-sm-0">
+              <td class="col-11 offset-1 col-sm-5 col-md-4 col-lg-3 offset-sm-0">
                 <ul class="list-unstyled my-0 text-muted" style="padding: 0 calc(0.75rem + 1px);">
                   <% for (var k = 0; k < track["recording"]["isrcs"].length; k++) { %>
                     <li><samp><%= escapeHtml(track["recording"]["isrcs"][k]) %></samp></li>
@@ -784,15 +796,17 @@ function restoreScrollPosition() {
           <% } %>
         </tbody>
       </table>
+    <% } else { %>
+      <p class="text-muted">(no tracks)</p>
     <% } %>
   <% } %>
   <div class="row">
-      <div class="col-11 col-sm-5 offset-1 offset-sm-7">
+      <div class="col-11 col-sm-5 col-md-4 col-lg-3 offset-sm-7 offset-md-8 offset-lg-9">
         <button id="check-isrcs-submit" type="submit" class="btn btn-primary">Check ISRCs &amp; update edit preview</button>
       </div>
   </div>
   <% if (anyISRCsValid) { %>
-    <h1 class="mt-3">Edit Preview</h1>
+    <h1 class="mt-3 h3">Edit Preview</h1>
     <div class="row">
       <div class="col-12 col-sm-2 offset-lg-1">
         <strong>Additions:</strong>
@@ -804,7 +818,7 @@ function restoreScrollPosition() {
             <% let isrc = isrcs[i][j]; %>
             <% let recording = release["media"][i]["tracks"][j]["recording"]; %>
             <% if (isrc["isrc"] && !isrc["invalid"]) { %>
-              <li>ISRC <samp><a href="<%= new URL("isrc/" + isrc["isrc"], mb_site) %>"><%= escapeHtml(isrc["isrc"]) %></a></samp> to <a href="<%= new URL("recording/" + recording["id"], mb_site) %>"><%= escapeHtml(recording["title"]) %></a> by <%= tmpl("template_ac", {ac: recording["artist-credit"]}) %></li>
+              <li>ISRC <samp><a class="text-decoration-none" href="<%= new URL("isrc/" + isrc["isrc"], mb_site) %>"><%= escapeHtml(isrc["isrc"]) %></a></samp> to <a class="text-decoration-none" href="<%= new URL("recording/" + recording["id"], mb_site) %>"><bdi><%= escapeHtml(recording["title"]) %></bdi></a> by <%= tmpl("template_ac", {ac: recording["artist-credit"]}) %></li>
             <% } %>
           <% } %>
         <% } %>
@@ -824,19 +838,19 @@ function restoreScrollPosition() {
 </form>
 </script>
 <script type="text/x-ejs" id="template_login_progress">
-<h2>Logging you in…</h2>
+<h1 class="h3">Logging you in…</h1>
 </script>
 <script type="text/x-ejs" id="template_release_progress">
-<h2>Loading Release</h2>
+<h1 class="h3">Loading Release</h1>
 <div class="d-flex justify-content-center"><div class="spinner-grow m-5"></div></div>
 </script>
 <script type="text/x-ejs" id="template_submit_progress">
-<h2>Entering edits</h2>
+<h1 class="h3">Entering edits</h1>
 <div class="d-flex justify-content-center"><div class="spinner-grow m-5"></div></div>
 </script>
-<script type="text/x-ejs" id="template_ac"><% for (var i = 0; i < ac.length; i++) { %><a href="<%= new URL("artist/" + ac[i]["artist"]["id"], mb_site) %>"><%= escapeHtml(ac[i]["name"]) %></a><%= escapeHtml(ac[i]["joinphrase"]) %><% } %></script>
+<script type="text/x-ejs" id="template_ac"><% for (var i = 0; i < ac.length; i++) { %><a class="text-decoration-none" href="<%= new URL("artist/" + ac[i]["artist"]["id"], mb_site) %>"><bdi><%= escapeHtml(ac[i]["name"]) %></bdi></a><bdi><%= escapeHtml(ac[i]["joinphrase"]) %></bdi><% } %></script>
 <script type="text/x-ejs" id="template_error">
-<h2>A bad thing happened</h2>
+<h1 class="h3">An error occured</h1>
 <p><%= escapeHtml("" + error) %></p>
 </script>
   </head>
@@ -852,7 +866,7 @@ function restoreScrollPosition() {
   </div>
 </div>
 <div class="container" id="container">
-  <h1>kepstin’s MagicISRC</h1>
+  <h1 class="h3">kepstin’s MagicISRC</h1>
   <p>If you’re seeing this, you either have Javascript disabled, or I’ve gone and broken the page.</p>
 </div>
 <footer class="text-muted my-3">
