Setup for webfonts

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>kepstin’s MagicISRC (Beta)</title>
     <link rel="stylesheet" href="bootstrap.css">
-<style>
-:root {
-  font-size: 14px;
-  --bs-font-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo, Consolas, "Liberation Mono", monospace;
-}
-</style>
+    <link rel="stylesheet" href="fonts.css">
 <script type="text/javascript">
 "use strict";
 
