--- a/index.html
+++ b/index.html
@@ -894,8 +894,7 @@ function restoreScrollPosition() {
 </div>
 <footer class="text-muted my-3">
   <div class="container">
-    <p><a href="privacy.html">Privacy Policy</a></p>
-    <p>Copyright ©2021 Calvin Walton. Available under the terms of the MIT license. Browse the source on <a href="https://github.com/kepstin/magicisrc">Github</a>.</p>
+    <p>Copyright ©2021 Calvin Walton. Available under the terms of the MIT license. Browse the source on <a href="https://github.com/kepstin/magicisrc">Github</a>. Read the <a href="privacy.html">Privacy Policy</a>.</p>
   </div>
 </footer>
 <script type="text/javascript">
