Fix wording of privacy policy
I use the words "code" and "key" to refer to the same thing in a couple
of places; fix it to only use "code"

--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
   <h2>Web access logs</h2>
   <p>Like many other web services, I keep logs of all web requests made to this service. These logs are used for diagnostic purposes, and no information from them is sent to any third party or made available publicly. These logs include your IP address, your browser’s “User-Agent” string, and which page you requested. The logs are deleted after 14 days.</p>
   <p>The data included in these logs may include information about the MusicBrainz release you have selected, and the data that you have filled into the ISRC fields.</p>
-  <p>During the login process, a one-time authorization key generated during the login process is included in these logs. This code cannot be used by itself to gain access to your account – a secret verification value is also required, which is stored only in your web browser local storage.<p>
+  <p>During the login process, a one-time authorization code generated during the login process is included in these logs. This code cannot be used by itself to gain access to your account – a secret verification value is also required, which is stored only in your web browser local storage.<p>
 </div>
 <footer class="text-muted my-3">
   <div class="container">
