--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
   <h1>Privacy Policy</h1>
   <p>The goal of this application is to allow batch-submission of ISRCs to MusicBrainz while storing the minimum amount possible of personally identifiable data. No data is sent to any third parties other than MusicBrainz, and only necessary persistent data is stored in your browser as a result of choosing to log in. Note that your login to MusicBrainz and ISRC submissions are subject to the <a href="https://metabrainz.org/privacy">MetaBrainz Privacy Policy</a>.</p>
   <h2>Web browser local storage</h2>
-  <p>The following data is used by MagicISRC but is stored only in your web browser local storage. This data is never sent to the server hosting MagicISRC or to any third parties:</p>
+  <p>The following data is used by MagicISRC but is stored only in your web browser local storage. This data is never sent to the server hosting MagicISRC or to any third parties other than MusicBrainz:</p>
   <ul>
     <li><b>MusicBrainz login information</b>. This includes your username, an access token for making API requests to submit ISRCs on your behalf, and any personal information on your MusicBrainz user profile that you have made visible to the public.</li>
   </ul>
